# ANPR

./: .gitignore  CMakeLists.txt  Makefile.bak  README.md
inc/: main.hpp
include/: file_handler.hpp
samples/: known_cars.txt
src/: file_handler.cpp  main.cpp
